Login y cargar usuario funcionales

--- a/fragments/nav/nav.html
+++ b/fragments/nav/nav.html
@@ -14,7 +14,7 @@
     <h2><a href="../../eleccion2.html"> Seccion Articulos</a></h2>
     <div class="usuario">
         <a href="../../eleccion.html">
-            <img src="../../img/User.png">
+            <img id="imgusuario" src="../../img/User.png">
             <h2 id="zona-usuario">Zona<br> Usuario</h2>
         </a>
     </div>
